[FIX] gap on safari phone

--- a/src/app/styles/components/_colorBar.scss
+++ b/src/app/styles/components/_colorBar.scss
@@ -90,6 +90,6 @@
     height: 20px;
   }
   .arrow-icon {
-    width: 10px;
+    width: 7px;
   }
 }
